# small-python-projects

./: .gitignore  LICENSE.txt  README.md  TODOs.txt  pyproject.toml
projects/api_usage/odoo-integration-examples/: LICENSE.txt  README.md  pyproject.toml  requirements.txt
projects/api_usage/odoo-integration-examples/extra/: releases_history.md
projects/api_usage/odoo-integration-examples/extra/odoo_secrets/: odoo_secrets_access_token.key
projects/api_usage/odoo-integration-examples/src/: call_model_method_get_invoice_types.py  call_model_method_message_post_on_move.py  config.py  count_out_invs.py  create_out_inv.py  get_server_version.py  odoo_client_ex_call_model_method.py  odoo_client_ex_call_model_method_message_post.py  odoo_client_ex_config.py  odoo_client_ex_count.py  odoo_client_ex_create.py  odoo_client_ex_get_server_version.py  odoo_client_ex_read.py  odoo_client_ex_search.py  odoo_client_ex_search_read.py  odoo_client_ex_search_read_invs_and_their_lines.py  odoo_client_ex_unlink.py  odoo_client_ex_write.py  odoo_client_ex_write_addon_state_to_upgrade.py  read_out_invs.py  search_out_invs.py  search_read_out_invs.py  search_read_out_invs_and_their_lines.py  search_read_sale_orders_and_their_lines.py  search_read_users.py  unlink_move.py  write_addon_state_to_upgrade.py  write_environment_ribbon.py  write_move.py
projects/api_usage/odoo-integration-examples/src/usage_examples/: call_model_method_get_invoice_types.py  call_model_method_message_post_on_move.py  call_model_method_message_post_on_sale.py  call_upgrade_modules_immediately.py  config.py  (+17 more)
(+627 files in other folders)
